--- a/landing_page.css
+++ b/landing_page.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Sans';
+    text-decoration: none;
 }
 html, body, #main_demo {
     padding: 0;
