--- a/landing_page.css
+++ b/landing_page.css
@@ -351,13 +351,39 @@ html, body, #main_demo {
     margin-top: 7px;
     padding-left: 5px;
 }
+/* Services */
+.comp_services {
+    width: 80%;
+    margin: auto;
+    margin-top: 80px;
+    margin-left: 19%;
+}
+.comp_services > div {
+    font-size: 16px;
+    flex-basis: 250px;
+    margin-right: 100px;
+    line-height: 30px;
+    justify-content: center;
+    color:  #000ff0;
+}
+.comp_services p {
+    font-size: 18px;
+    color: black;
+    font-weight: 500;
+}
+.comp_services i {
+    color: black;
+    margin-top: 22px;
+    padding-left: 5px;
+}
 /* footer */
 #footer {
-    margin-top: 150px;
+    margin-top: 99px;
     display: flex;
-    padding-left: 17%;
-    padding-right: 17%;
+    padding-left: 19%;
+    padding-right: 19%;
     padding-bottom: 100px;
+    flex-basis: 300px;
 }
 #footer > div {
     flex-basis: 150px;
