--- a/landing_page.css
+++ b/landing_page.css
@@ -302,7 +302,7 @@ html, body, #main_demo {
     font-size: 14px;
     gap: 20px;
     margin: auto;
-    padding-bottom: 100px;
+    padding-bottom: 180px;
     color: #716890;
 }
 .options >div:nth-child(1) {
@@ -323,6 +323,86 @@ html, body, #main_demo {
     height: 2px;
     background-color: white;
     margin: auto;
+}
+/* Reviews */
+
+.review {
+    max-width: 1000px;
+    background-color: white;
+    border-radius: 8px;
+    margin: auto;
+    margin-top: -150px;
+}
+.review_read {
+    color: white;
+    background-color: #3a8181;
+    width: 400px;
+    height: 450px;
+    padding-left: 50px;
+    padding-top: 70px;
+    border-radius: 8px 60px 60px 8px;
+}
+.review_read > p {
+    font-size: 14px;
+}
+.review_read > p:nth-child(3) {
+    font-size: 20px;
+}
+.read_line {
+    width: 80px;
+    height: 1.11px;
+    background-color: white;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+.read_story {
+    border: 1px solid white;
+    padding: 10px;
+    height: 40px;
+    border-radius: 4px;
+}
+.read_story > p {
+    margin-top: 0;
+}
+.read_story i {
+    margin-top: 2px;
+    margin-left: 10px;
+}
+.review_txt {
+    padding-top: 20px;
+    padding-left: 80px;
+    padding-right: 30px;
+    max-width: 60%;
+}
+.review_txt > p{
+    font-size: 24px;
+}
+.review_txt > h4 {
+    font-size: 26px;
+    padding-top: 30px;
+}
+.review_txt > div {
+    padding-left: 55%;
+    margin-top: -35px;
+}
+.review_txt img {
+    width: 150px;
+    height: 40px;
+}
+.txt_ayush {
+    background-color: #242565;
+}
+.txt_val {
+    background-color: #bc7e0f;
+}
+/* #rethink_pricing {
+    display: none;
+} */
+#automate_finops {
+    display: none;
+}
+#go_global {
+    display: none;
 }
 /* bottom head */
 .bottom_head {
@@ -350,7 +430,7 @@ html, body, #main_demo {
 .head_sch i {
     margin-top: 7px;
     padding-left: 5px;
-}
+
 /* Services */
 .comp_services {
     width: 80%;
