--- a/landing_page.css
+++ b/landing_page.css
@@ -7,7 +7,18 @@ html, body, #main_demo {
     padding: 0;
     margin: 0;
 }
-
+.header a {
+    color: #4e5058;
+}
+.demo a, .schedule_purple a, .head_sch a {
+    color: white;
+}
+.login {
+    color: black;
+}
+.learn_more a {
+    color: #000ff0;
+}
 .display_flex {
     display: flex;
 }
