Pricing page faq update

--- a/pricing.css
+++ b/pricing.css
@@ -38,7 +38,9 @@ line-height: 4.5rem;
 font-size: 2.5rem;
 font-weight: 600;
 text-align: center;
+
 }
+
 
 
 
@@ -388,7 +390,19 @@ text-align: center;
     margin-top: 8rem;
     
 }
-
+#Fname,#Email, #name {
+    height: 4rem;
+    width: 35rem;
+}
+#Phone {
+    height: 4rem;
+    width: 7rem;
+}
+#isdcode
+{
+    height: 4rem;
+    width:27.5rem;
+}
 .form_privacy{
     font-size: 1.2rem;
     text-decoration: none;
@@ -408,29 +422,182 @@ text-align: center;
 
 .ask_question {
     background-color: greenyellow;
-    padding: relative;
+    position: relative;
     width: 100%;
     height: 70rem; 
 
 }
 .aeroplane{
-    width: 60rem;
-    height: 40rem;
-    background-color: burlywood;
+    position: absolute;
+    width: 80rem;
+    height: 30rem;
+    background-color: white;
+    top: 10rem;
+    right: 25rem;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem  1.5rem rgba(0, 0, 0, 0.438);
+    background: url(https://webstatic.chargebee.com/assets/web/352/images/launch/launch-banner-pricing.svg);
+    background-size: cover;
+    
    
  
 
 }
 
 
-.top_left_logo:after {
+.top_left_logo::after {
     content: '';
     border: 18px solid transparent;
     border-right-color: #fff;
     display: inline-block;
     position: absolute;
-    right: 0;
     top: 0;
+    left: 16.4rem;
+    /* z-index: -1; */
+    
+}
+.top_left_logo{
+    font-size: 1.7rem;
+    color: black ;
+    background-color: #6f43ae;
+    width: 20rem;
+    height: 3.6rem;
+}
+
+.ask {
+    margin-right: 40rem;
+    margin-top: 2rem;
+   
+}
+
+.ask_1 {
+    width: 40rem;
+    margin-left: 6rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.ask_learnmore{
+    text-decoration: none;
+    font-size: 1.4rem;
+    margin-left: 6rem;
+    
+
+}
+
+.frequent_container{
+    position: relative;
+    width: 100%;
+    background:white;
+    height: 50rem;
+    display: flex;
+    flex-direction: row;
+    top: 50rem;
+    
+    
+}
+.frequent_cont{
+    width: 80%;
+    display: flex;
+    margin: auto;
+    border: 2px solid yellow;
+    justify-content: space-evenly;
+    
+   
+}
+
+
+.frequent_l{
+    width: 30.7rem;
+    border: 1px solid red;
+    /* margin: 10rem; */
+    position: relative;
+
+}
+
+.frequent_r{
+    width: 45rem;
+    border: 1px solid greenyellow;
+    /* margin: 10rem; */
+
+}
+.freqeunt_img{
+    width: 100%;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+
+img[alt=frequentman]{
+
+ border-radius: 50rem;
+ width: 10rem;
+ height: 10rem;
+
+
+}
+
+.frequent_coma{
+    position: relative;
+    font-size: 1.6rem;
+    text-align: center;
+
+}
+.frequent_red{
+    color: red;
+}
+
+.frequent_coma::before{
+   
+    content: '';
+    background: url(https://webstatic.chargebee.com/assets/web/352/images/icon/quote/cb-quote.svg) no-repeat;
+    width: 6rem;
+    height: 6rem;
+    position: absolute;
+    background-size: contain;
+    opacity: .6;
+    left: 1rem;
+    top: -2rem;
+    
+}
+.frequent_director{
+    font-size: 1.6rem;
+    text-align: center;
+    margin-top: 3rem;
+    margin-bottom: 15rem;
+    
+}
+
+.profit_link{
+    width: 100%;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.profit_not{
+    font-size: 1.7rem;
+    color: black;
+    
+    
+}
+
+.profit_Rallying{
+    color: black;
+    font-size: 1.3rem;
+
+}
+.frequent_heading{
+    text-align: left;
+    font-size: 2rem;
+}
+
+.faq {
+    max-width: 40rem;
 }
 
 
