--- a/learn-more-styles.css
+++ b/learn-more-styles.css
@@ -5,6 +5,29 @@ a {
     text-decoration: none;
     color: blue;
 }
+.box_anchor {
+    font-weight: bold;
+    font-size: 20px;
+}
+.box_anchor:hover {
+    opacity: 0.7;
+}
+.box_small_head {
+    font-size: 22px;
+    color: darkgray;
+    margin-bottom: 5px;
+    margin-top: 0;
+}
+.box_main_head {
+    font-weight: bold;
+    font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.box_writeup {
+    font-size: 20px;
+    margin-top: 0;
+}
 #layout {
     display: grid;
     grid-gap: 0%;
@@ -132,6 +155,14 @@ a {
     width: 1200px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+#salient_features_with_img > div{
+    margin: auto;
+    margin-left: 700px;
+    margin-top: 70px;
+    width: 500px;
+    height: 400px;
+
+}
 #salient_features_with_img_2 {
     margin: auto;
     margin-top : 100px;
@@ -141,8 +172,11 @@ a {
     height: 400px;
     width: 1200px;
 }
+#salient_features_with_img_2 > div {
+    height: 350px;
+    width: 500px;
+}
 #subscription_ad {
-    border: 1px solid black;
     height: 300px;
     width: 800px;
     margin:auto;
@@ -151,8 +185,21 @@ a {
     background-repeat: no-repeat;
     background-position: 50% 10%;
 } 
+#subscription_ad > div:nth-child(1) {
+    margin-top: 125px;
+}
+#subscription_ad > div:nth-child(2) {
+    margin-left: 100px;
+    font-size: 20px;
+}
+#subscription_ad > div > p {
+    font-size: 25px;
+    text-align: center;
+}
+#subscription_ad > div > a {
+    margin-left: 50px;
+}
 #demo_signup {
-    border: 1px solid black;
     height: 250px;
     width: 700px;
     margin:auto;
@@ -188,7 +235,6 @@ a {
 #demo_exclusive {
     height: 150px;
     width: 1000px;
-    border: 1px solid black;
     margin : auto;
     margin-top: 100px;
 }
@@ -214,16 +260,14 @@ a {
     clear: both;
 }
 #company_centric_details {
-    border: 1px solid black;
     height: 310px;
-    width: 1300px;
-    margin-left: 220px;
+    width: 1100px;
+    margin-left: 160px;
     margin-top: 60px;
 }
 #company_centric_details > div {
     width: 250px;
     height: 300px;
-    border: 1px solid black;
     float: left;
     margin: 10px;
 }
@@ -306,12 +350,11 @@ a {
 }
 #footer{
     background-color: white;
-    border: 1px solid red;
     background-image: url('https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg');
     background-repeat: no-repeat;
     background-size: 100px;
     height: 80px;
-    width: 1100px;
+    width: 1000px;
     margin : auto;
     margin-top: 80px;
     background-position: 2% 20%;
