--- a/learn-more-styles.css
+++ b/learn-more-styles.css
@@ -128,19 +128,34 @@ a {
    background-attachment: fixed;
    box-shadow:inset 0 0 200px 150px rgba(0,0,0,0.9);
 }
-#testimonial > p {
+#testimonial > div > p {
     color: white;
-    text-align: center;
+    text-align: left;
+    font-size: 20px;
 }
-
-#salient_features {
-    border : 1px solid black;
+#testimonial_author {
+    margin-left: 250px;
+    color: white;
+    text-align: left;
+    font-size: 20px;
 }
-
-#salient_features > div {
-    border: 1px solid black;
+#testimonial > div {
     height: 400px;
-    width: 400px;
+    width: 500px;
+    margin-top: 100px;
+    margin-left: 820px;
+    background-image: url('https://webstatic.chargebee.com/assets/web/352/images/case-study/trail/trail-logo-white.svg');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+#testimonial  a {
+    color: white;
+    text-decoration: underline;
+}
+#salient_features > div {
+    margin-top: 100px;
+    height: 400px;
+    width: 500px;
     float: left;
     margin-left: 150px;
 }
