--- a/landing_page.css
+++ b/landing_page.css
@@ -72,6 +72,7 @@ html, body, #main_demo {
     padding-top: 1.5%;
     background-color: #f9f9f9;
     display: none;
+    z-index: +9999;
 }
 .dropdown_content > div{
     font-size: 14px;
@@ -91,12 +92,19 @@ html, body, #main_demo {
     margin-left: -30px;
 }
 .header_dropdown_solutions {
-    /* display: none; */
+    display: none;
     padding-left: 10%;
     padding-top: 1.5%;
+    background-color: #f9f9f9;
 }
 .drop_sol > div { 
-    width: 200px;
+    width: 190px;
+}
+.drop_sol > div:nth-child(2) {
+    margin-left: -70px;
+}
+.drop_sol > div:nth-child(5) {
+    margin-left: 5px;
 }
 /* colored subscription CSS */
 .colored_sub {
