--- a/landing_page.css
+++ b/landing_page.css
@@ -7,6 +7,8 @@ html, body, #main_demo {
     padding: 0;
     margin: 0;
     font-size: 16px;
+    max-width: 1920px;
+    margin: auto;
 }
 
 .display_flex {
@@ -66,7 +68,7 @@ html, body, #main_demo {
     margin-top: 9px;
     margin-right: 5px;
 }
-/* popout_product */
+/* dropdown_product */
 .header_dropdown_product {
     padding-left: 10%;
     padding-top: 1.5%;
@@ -408,10 +410,18 @@ html, body, #main_demo {
 .options >div:nth-child(3){
     grid-area: right_up;
 }
-.under_line{
+.line_left {
     grid-area: left_down;
 }
-.under_line > div {
+.line_middle{
+    grid-area: middle_down;
+    display: none;
+}
+.line_right {
+    grid-area: right_down;
+    display: none;
+}
+.under_line {
     width: 60px;
     height: 2px;
     background-color: white;
@@ -420,10 +430,10 @@ html, body, #main_demo {
 /* Reviews */
 #reviews {
     width: 100%;
-    height: 200px;
+    height: 350px;
 }
 .review {
-    max-width: 1000px;
+    max-width: 1050px;
     background-color: white;
     border-radius: 8px;
     margin: auto;
@@ -472,7 +482,7 @@ html, body, #main_demo {
     padding-top: 20px;
     padding-left: 80px;
     padding-right: 30px;
-    max-width: 60%;
+    max-width: 55%;
 }
 .review_txt > p{
     font-size: 24px;
