--- a/learn-more-styles.css
+++ b/learn-more-styles.css
@@ -20,7 +20,7 @@ a {
 }
 .box_main_head {
     font-weight: bold;
-    font-size: 40px;
+    font-size: 36px;
     margin-top: 0;
     margin-bottom: 10px;
 }
@@ -90,7 +90,6 @@ a {
     margin-top: 60px;
 }
 #tag_description > div {
-    border : 1px solid black;
     height: 150px;
     width: 350px;
     margin: 10px;
@@ -99,12 +98,15 @@ a {
 
 }
 #tag_description > div:nth-child(1) {
-    border : 1px solid black;
+    background-image: url('https://webstatic.chargebee.com/assets/web/352/images/product/common/creation.svg');
+    background-repeat: no-repeat;
+    background-position: 100% 20%;
     height: 320px;
     width: 350px;
     float: left;
     margin-left: 160px;
     margin-right: 30px;
+    text-align: right;
 }
 #tag_description > hr {
     width:70%;
@@ -112,12 +114,16 @@ a {
     clear: both;
 }
 #deeper_description {
-    margin-top: 150px;
-    /*border: 1px solid black;*/
+    margin-top: 30px;
     background-image: url('https://webstatic.chargebee.com/assets/web/352/images/product/subscription-management/price-the-way-pocket.svg');
-    height: 350px;
+    height: 400px;
     background-repeat: no-repeat;
     background-position: 70% 50%;
+}
+#deeper_description > div {
+    width: 500px;
+    height: 400px;
+    margin-left: 150px;
 }
 #testimonial {
     background-image: url('https://webstatic.chargebee.com/assets/web/352/images/product/testimonial/trail-testimonial.png');
@@ -127,6 +133,7 @@ a {
     background-size: cover;
    background-attachment: fixed;
    box-shadow:inset 0 0 200px 150px rgba(0,0,0,0.9);
+   margin-top: 100px;
 }
 #testimonial > div > p {
     color: white;
