--- a/pricing.css
+++ b/pricing.css
@@ -4,8 +4,17 @@
     box-sizing: inherit;
 }
 
+
+
+
+@media(max-width:600px){
+    nav{background: red;}
+}
+
 html{
     font-size: 62.5%; /*1rem = 10px */
+    
+
 }
 
 body{
@@ -51,13 +60,15 @@ text-align: center;
 }
 
 .top_currency_buttons{
-    position: absolute; /*taking position from parent*/
-    right: 15rem; 
+    position: absolute;
+    /* right: 15rem; */
+    left: -.5rem;
+    bottom: 3rem;
     border: none;
 }
 
 .top_toggle_button{
-    margin: 3rem;
+    margin: 2.5rem;
     border: none;
     font-weight:400;
     
@@ -65,7 +76,7 @@ text-align: center;
 }
 .top_toggle_button:focus{
     outline: none ;
-    color: #6f43ae;
+    color: #3a008c;
 }
 
 .top_togle_currency{
@@ -76,17 +87,17 @@ text-align: center;
 
 .top_currency_buttons:link, .top_currency_buttons:active{
     outline:none;
-    color: #6f43ae;
+    color: #3a008c;
 }
 
 .top_currency_buttons:focus{
     outline: none;
-    color: #6f43ae;
+    color: #3a008c;
 }
 
 .top_togle_currency{
  outline : none;
- color: #6f43ae;
+ color: #3a008c;
 }
 
 /*top_aea box of grid*/
@@ -132,10 +143,6 @@ text-align: center;
     position: relative;
 }
 
-.hero_col4{
-    
-}
-
 div.hero_col1 p{
     position: absolute;
     top: 60%;
@@ -153,7 +160,7 @@ div.hero_col1 a{
 .hero_top_heading{
     display: inline-block;
     font-size: 2rem;
-    color: #6f43ae;
+    color: #3a008c;
     margin-bottom: 1.5rem;
     padding-left: 2rem;
 
@@ -164,14 +171,17 @@ div.hero_col1 a{
     position: absolute;
     padding: .4rem;
     border-radius: 8rem;
-    color: #6f43ae ;
+    color: #3a008c ;
     background-color: transparent;
-    border: 2px solid #6f43ae;
+    border: 2px solid #3a008c;
     font-size: 1.2rem;
     
 
 }
 
+.u-margin-bottom{
+    margin-bottom: 8.4rem;
+}
 .price_rate
 {
     font-size: 2rem;
@@ -184,9 +194,9 @@ div.hero_col1 a{
 }
 
 .price_rate2{
-    font-size: 1.3;
+    font-size: 1.5rem;
     font-weight: 1.5rem;
-    margin-top: 1.5rem;
+    margin-top: 4.5rem;
 
 }
 
@@ -195,10 +205,27 @@ div.hero_col1 a{
     color: white;
     border: none;
     border-radius: .5rem;
-    background-color: #6f43ae; 
+    background-color: #3a008c; 
     font-size: 1.6rem;  
     margin-top: 2rem;
 
+}
+.btn_2{
+    padding: 1.5rem 4.5rem;
+    color: #3a008c;
+    border-radius: .5rem;
+    background-color: transparent; 
+    border: 2px solid #3a008c;
+    font-size: 1.6rem;  
+    margin-top: 2rem;
+
+}
+.btn_2:hover {
+    padding: 1.5rem 4.5rem;
+    color: white;
+    border: none;
+    border-radius: .5rem;
+    background-color: #3a008c; 
 }
 
 .hero_offer_discription{
@@ -262,17 +289,18 @@ div.hero_col1 a{
 .middle{
     width: 100%;
     background: #eef0f2;
-    height: 110rem;
+    height: 100rem;
     display: flex;
     flex-direction: row;
-    margin-top: 30rem;
+    margin-top: 10rem;
   
 
 }
 .middle_S{
     width: 80%;
     display: flex;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
    
 }
 
@@ -286,25 +314,13 @@ div.hero_col1 a{
     margin-top: 10rem;
     
 }
-.middle_r{
-    display: flex;
-    margin: 10px;
-    padding: 10px;
-    width: 50rem;
-    flex-wrap: wrap;
-    /* border: 2px solid blue; */
-    margin-top: 10rem;
-    box-shadow: 0 .5rem  1.5rem rgba(0, 0, 0, 0.438);
-    
-}
-
-
-
 .middle_quote {
     position: relative;
     padding: 10px;
     float: left;
 }
+
+
 .quote_coma{
     font-size: 1.8rem;
     margin-top: 3rem;
@@ -361,10 +377,10 @@ text-align: center;
 
 .middle_footer_para{
     position: absolute;
-    bottom: -115rem;
+    bottom: 19rem;
     width: 30rem;
     font-size: 1.6rem;
-    left: 45rem;
+    left: 30rem;
 }
 
 /* middle form styling*/
@@ -375,6 +391,17 @@ text-align: center;
     padding: 5rem;
     font-size: 1.5rem;
       
+}
+.middle_r{
+    display: flex;
+    height: 77rem;
+    margin: 10px;
+    padding:10 px;
+    width: 50rem;
+    flex-wrap: wrap;
+    margin-top: 10rem;
+    box-shadow: 0 .5rem  1.5rem rgba(0, 0, 0, 0.438);
+    
 }
 
 .Form_star_red{
@@ -396,12 +423,12 @@ text-align: center;
 }
 #Phone {
     height: 4rem;
-    width: 7rem;
+    width: 10rem;
 }
 #isdcode
 {
     height: 4rem;
-    width:27.5rem;
+    width:24.5rem;
 }
 .form_privacy{
     font-size: 1.2rem;
@@ -409,7 +436,7 @@ text-align: center;
 }
 .form_shedule{
     color: white;
-    background-color: #6f43ae;
+    background-color: #3a008c;
     border-radius: .5rem;
     margin-top: 4rem;
     width: 25rem;
@@ -421,7 +448,6 @@ text-align: center;
 /* ask question page style*/
 
 .ask_question {
-    background-color: greenyellow;
     position: relative;
     width: 100%;
     height: 70rem; 
@@ -459,7 +485,7 @@ text-align: center;
 .top_left_logo{
     font-size: 1.7rem;
     color: black ;
-    background-color: #6f43ae;
+    background-color: #3a008c;
     width: 20rem;
     height: 3.6rem;
 }
@@ -497,10 +523,9 @@ text-align: center;
     
 }
 .frequent_cont{
-    width: 80%;
+    width: 90%;
     display: flex;
     margin: auto;
-    border: 2px solid yellow;
     justify-content: space-evenly;
     
    
@@ -508,8 +533,8 @@ text-align: center;
 
 
 .frequent_l{
-    width: 30.7rem;
-    border: 1px solid red;
+    width: 35.7rem;
+    
     /* margin: 10rem; */
     position: relative;
 
@@ -517,7 +542,6 @@ text-align: center;
 
 .frequent_r{
     width: 45rem;
-    border: 1px solid greenyellow;
     /* margin: 10rem; */
 
 }
@@ -540,6 +564,8 @@ img[alt=frequentman]{
 }
 
 .frequent_coma{
+    margin-top: 2rem;
+    line-height: 3rem;
     position: relative;
     font-size: 1.6rem;
     text-align: center;
@@ -566,7 +592,7 @@ img[alt=frequentman]{
     font-size: 1.6rem;
     text-align: center;
     margin-top: 3rem;
-    margin-bottom: 15rem;
+    margin-bottom: 23.5rem;
     
 }
 
@@ -594,16 +620,95 @@ img[alt=frequentman]{
 .frequent_heading{
     text-align: left;
     font-size: 2rem;
+    display: inline-block;
+    margin-bottom: 3.7rem;
 }
 
 .faq {
-    max-width: 40rem;
+    margin-top: 4rem;
+    position: relative;
+    width: 40rem;
+    border: none;
+    height: 5rem;
+    display: inline-block;
+    text-align: left;
+    margin-left: 5rem;
+    background-color: transparent;
+
+}
+
+.faq_answer{
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    display: none;
+    color: rgba(0, 0, 0, 0.68);
+    text-align: left;
+
+}
+
+.faq_question{
+    display: inline-block;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    color: rgba(0, 0, 0, 0.838);
+  
+}
+
+.faq:focus{
+    outline:none;
 }
 
 
+.faq:focus .faq_question{
+    font-weight: 600;
+}
 
+.faq:focus .faq_answer{
+    display: inline-block;
+}
 
+.faq_read{
+    width: 40rem;
+    margin-left: 5rem;
+    height: 5rem;
+    margin-top: 4rem;
+    border: none;
+    background-color: transparent;
+}
 
+.faq_link{
+    text-decoration: none;
+    display: inline-block;
+    margin-right: 31rem;
+}
+.frequent_footer{
+    display: flex;
+    margin-top: 90rem;
+    justify-content: space-between;
+    width: 82%;
+    margin-left: auto;
+    margin-left: auto;
+}
+
+.frequent_line{
+    font-size: 2.3rem;
+
+}
+
+.frequent_btn{
+    margin-right: 25rem;
+    margin-top: 2.1rem;
+    
+}
+
+.frequent_button{
+    padding: 1.5rem 4.5rem;
+    color: white;
+    border: none;
+    border-radius: .5rem;
+    background-color: #3a008c; 
+    font-size: 1.6rem; 
+}
 
 
 
