--- a/login.css
+++ b/login.css
@@ -126,3 +126,23 @@
      color: gray;
      text-align: center;
  }
+ #img6{
+     width: 40px;
+     height: 30px;
+ }
+ .p7{
+     padding-top: -2px;
+     padding-right:14px;
+     font-size: 14px;
+     color: white;
+ }
+ .btn{
+     width: 100%;
+     height: 40px;
+     margin-top: 20px;
+     background-color: #4285f4;
+ }
+ .btn2{
+     margin-left:30px;
+     color: #4285f4; 
+ }
