--- a/learn-more-styles.css
+++ b/learn-more-styles.css
@@ -14,19 +14,19 @@ a {
     opacity: 0.7;
 }
 .box_small_head {
-    font-size: 22px;
+    font-size: 18px;
     color: darkgray;
     margin-bottom: 5px;
     margin-top: 0;
 }
 .box_main_head {
     font-weight: bold;
-    font-size: 36px;
+    font-size: 32px;
     margin-top: 0;
     margin-bottom: 10px;
 }
 .box_writeup {
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 0;
 }
 #layout {
@@ -46,6 +46,8 @@ a {
 #nav_bar > div {
     float: left;
     margin: 1%;
+    font-size: 15px;
+    font-weight: 700;
 }
 #nav_bar > div:nth-child(1) {
     margin-left: 200px;
@@ -63,6 +65,12 @@ a {
     font-size: 15px;
     font-weight: bold;
 } 
+#nav_bar span:hover {
+    margin-left: 10px;
+}
+#nav_bar > :nth-child(7) {
+    margin-left: 350px;
+}
 #nav_bar > img {
     height: 20px;
     width: 100px;
@@ -234,7 +242,7 @@ a {
     margin-left: 250px;
     color: white;
     text-align: left;
-    font-size: 20px;
+    font-size: 18px;
 }
 #testimonial > div {
     height: 400px;
@@ -318,7 +326,7 @@ a {
     margin-top: 100px;
 }
 #demo_signup > div > p {
-    font-size: 40px;
+    font-size: 36px;
     font-weight: bold;
     text-align: center;
 }
@@ -351,14 +359,14 @@ a {
     margin-top: 100px;
 }
 #demo_exclusive >div {
-    width : 450px;
+    width : 500px;
     float: left;
 }
 #demo_exclusive > div:nth-child(2) {
     margin-top : 40px;
 }
 #demo_exclusive > div > p {
-    font-size: 30px;
+    font-size: 28px;
     font-weight: bold;
     text-align: left;
 }
@@ -385,7 +393,7 @@ a {
 }
 .company_features_header {
     color: black;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
 }
 /*Working with animated arrow feature*/
@@ -456,6 +464,7 @@ a {
 }
 .sub_headers {
     transition: 0.3s;
+    font-size: 14px;
 }
 .sub_headers:hover {
     margin-left: 5px;
