--- a/landing_page.css
+++ b/landing_page.css
@@ -28,6 +28,9 @@ html, body, #main_demo {
 .display_grid {
     display: grid;
 }
+.hover:hover {
+    padding-left: 5px;
+}
 .header {
     width: 100%;
     height: 50px;
