--- a/landing_page.css
+++ b/landing_page.css
@@ -82,7 +82,15 @@ html, body, #main_demo {
     margin-top: 9px;
     margin-right: 5px;
 }
+.login_arrow {
+    display: none;
+}
+.sch_nav_arrow {
+    display: none;
+}
+
 /* dropdown_product */
+
 .header_dropdown_product {
     padding-left: 10%;
     padding-top: 1.5%;
@@ -158,7 +166,7 @@ html, body, #main_demo {
     align-items: center;
 }
 .sign_i {
-    padding-left: 10px;
+    padding-left: 5px;
 }
 .sch_signup_btn > div:nth-child(1), .schedule_purple {
     flex-basis: 240px;
@@ -550,6 +558,9 @@ html, body, #main_demo {
     font-size: 36px;
     width: 700px;
     margin-right: 33%;
+}
+.btm_sch_arrow {
+    display: none;
 }
 .head_sch {
     margin-top: 80px;
